<resources>
    <string name="app_name">Wagba</string>
    <string name="loginSlogan">Get your food now</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_prompt">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_description">Best solution to order food quickly and reliably from the comfort of your phone</string>
    <string name="sign_in_with_emoji">Sign In ✌</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="exist_account_prompt">Already have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="nav_drawer_open">Opening Drawer</string>
    <string name="nav_drawer_close">Closing Drawer</string>
    <string name="checkout">CheckOut</string>
    <string name="empty_cart">Your Cart Is Empty</string>
    <string name="food">Food</string>
    <string name="items_total">Items Total:</string>
    <string name="_0le">0LE</string>
    <string name="delivery_fees">Delivery Fees:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="your_orders">Your Orders</string>
    <string name="main_slogan">Find \nFood near FEASU</string>
    <string name="popular">Popular</string>
    <string name="restaurants">Restaurants</string>
    <string name="welcome">Welcome,</string>
    <string name="test_username">Ahmed!</string>
    <string name="full_name_placeholder">Ahmed Emad</string>
    <string name="email">Email</string>
    <string name="email_placeholder">18p3597@eng.asu.edu.eg</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="back_to_main">Back to Main</string>
    <string name="rating_placeholder">4.8</string>
    <string name="number_of_dishes_placeholder">105</string>
    <string name="number_of_orders_placeholder">375</string>
    <string name="rating">Rating</string>
    <string name="dish">Dish</string>
    <string name="order">Order</string>
    <string name="food_image">food image</string>
    <string name="title">Title</string>
    <string name="cart_minus">minus one from cart</string>
    <string name="item_placeholder">1</string>
    <string name="cart_add">add one to cart</string>
    <string name="_0">0</string>
    <string name="currency">LE</string>
    <string name="food_name_placeholder">Float Cake</string>
    <string name="price_placeholder">119.12LE</string>
    <string name="order_number_placeholder">Order #</string>
    <string name="status_placeholder">Delivered</string>
    <string name="number_of_items_placeholder">Number of Items: </string>
    <string name="order_on">Order on</string>
    <string name="calender">calender</string>
    <string name="date_placeholder">09/12/2022</string>
    <string name="star">star</string>
    <string name="not_available">Not Available</string>
    <string name="_150">150</string>
    <string name="_4">4</string>
    <string name="multiply">x</string>
    <string name="_18">18</string>
    <string name="at_sign">\@</string>
    <string name="order_time_placeholder">12:00</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="cart">Cart</string>
</resources>