<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp">

    <TextView
        android:id="@+id/order_item_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/food_name_placeholder"
        android:textColor="@color/dark_blue"
        android:layout_weight="2"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/order_item_price"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/_18"
        android:textColor="@color/dark_blue"
        android:gravity="bottom"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/currency"
        android:textColor="@color/dark_blue"
        android:gravity="bottom"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/multiply"
        android:textColor="@color/dark_blue"
        android:gravity="bottom"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/order_item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/_4"
        android:textColor="@color/dark_blue"
        android:gravity="bottom"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/order_item_total_price"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/_150"
        android:textColor="@color/orange"
        android:gravity="center_vertical|end"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/currency"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:gravity="center_vertical|end"
        android:textSize="15sp"/>

</LinearLayout>