<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview20"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/order_number_placeholder"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"/>

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="1234"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/status_placeholder"
                    android:layout_gravity="end"
                    />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/number_of_items_placeholder"
                />

            <TextView
                android:id="@+id/order_item_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/_4"
                />
        </LinearLayout>


                <View
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="@string/order_on"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_date_range_24"
                    android:contentDescription="@string/calender" />

                <TextView
                    android:id="@+id/order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="@string/date_placeholder"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="@string/at_sign"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="@string/order_time_placeholder"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/order_price"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/price_placeholder"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/currency"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/order_items_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">
                <!-- Child item views go here -->

            </LinearLayout>


        </LinearLayout>




</androidx.cardview.widget.CardView>