<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/restaurant_food_image"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/food_image" />

        <TextView
            android:id="@+id/restaurant_food_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:text="@string/food_name_placeholder"
            android:textColor="#99000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/restaurant_food_name"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_food_name" />

        <TextView
            android:id="@+id/restaurant_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/food_name_placeholder"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/restaurant_food_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/restaurant_food_minus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_food_image"
            app:layout_constraintStart_toStartOf="@+id/restaurant_food_name"
            app:srcCompat="@drawable/minus"
            android:contentDescription="@string/cart_minus" />

        <TextView
            android:id="@+id/restaurant_food_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_marginStart="8dp"
            android:textColor="@color/blue_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/restaurant_food_minus_btn"
            app:layout_constraintTop_toTopOf="@+id/restaurant_food_minus_btn" />

        <ImageView
            android:id="@+id/restaurant_food_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_food_minus_btn"
            app:layout_constraintStart_toEndOf="@+id/restaurant_food_count"
            app:layout_constraintTop_toTopOf="@+id/restaurant_food_minus_btn"
            app:srcCompat="@drawable/plus"
            android:contentDescription="@string/cart_add" />

        <TextView
            android:id="@+id/restaurant_food_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/blue_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintTop_toTopOf="@+id/restaurant_food_name" />
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/currency"
            android:layout_marginStart="8dp"
            android:textColor="@color/blue_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restaurant_food_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
