<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_height="100dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <ImageView
            android:id="@+id/restaurant_food_image"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/restaurant_image" />

        <TextView
            android:id="@+id/restaurant_food_description"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:text="@string/food_name_placeholder"
            android:textColor="#99000000"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/restaurant_food_name"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_food_name" />

        <TextView
            android:id="@+id/restaurant_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/food_name_placeholder"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/restaurant_food_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/restaurant_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/rating_placeholder"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/restaurant_food_description"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_food_description"
            app:srcCompat="@drawable/ic_star_black_24dp"
            android:contentDescription="@string/star" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
